# google-authenticator-libpam

./: FILEFORMAT  Makefile.am  README.md  configure.ac
contrib/: README.rpm.md  rpm.spec.in
examples/: demo.c
man/: otp-config.1  otp-config.1.md  pam_otp.8  pam_otp.8.md
src/: otp-config.c  pam_otp.c
tests/: pam_otp_unittest.c
